syntax = "proto3";

package mpi.messages;

message TravelTimesMessage {
  map<uint64, uint32> travelTimesByLinkId = 1;
}

// this is a message for the mpi examples
message ExperimentalMessage {
  uint64 timestamp = 1;
  uint32 counter = 2;
  string additional_message = 3;
}

// messages for the qsim
message SyncMessage {
  uint32 time = 1;
  uint32 from_process = 2;
  uint32 to_process = 3;
  repeated Vehicle vehicles = 4;
  repeated StorageCap storage_capacities = 5;
}

message StorageCap {
  uint64 link_id = 1;
  float value = 2;
}

message Vehicle {
  uint64 id = 1;
  uint32 curr_route_elem = 2;
  uint64 type = 3;
  float max_v = 4;
  float pce = 5;
  Agent agent = 6;
  // this must be extended once more people use one vehicle
}

message Agent {
  uint64 id = 1;
  uint32 curr_plan_elem = 2;
  Plan plan = 3;
}

message Plan {
  repeated Leg legs = 1;
  repeated Activity acts = 2;
}

message Activity {
  uint64 act_type = 1;
  uint64 link_id = 2;
  double x = 3;
  double y = 4;
  optional uint32 start_time = 5;
  optional uint32 end_time = 6;
  optional uint32 max_dur = 7;
}

message Leg {
  uint64 mode = 1;
  uint64 routing_mode = 2;
  optional uint32 dep_time = 3;
  uint32 trav_time = 4;
  Route route = 5;
}

message Route {
  uint64 veh_id = 1;
  double distance = 2;
  repeated uint64 route = 3;
}